apps/routers/talos-related-routes/water-https/water-teamhephy-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: water-teamhephy
  namespace: traefik-staging
spec:
  ports:
    - name: water-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
    - name: water-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: water-teamhephy
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.208
  ports:
  - port: 443
    name: water-https
  - port: 80
    name: water-http
